enable hot reload

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,7 +8,8 @@ WORKDIR /frontend
 ENV PATH /frontend/node_modules/.bin:$PATH
 
 # install app dependencies
-COPY package.json ./
+ADD yarn.lock ./
+ADD package.json ./
 RUN yarn install --silent
 RUN yarn global add react-scripts@3.4.1 --silent
 
