--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
         DJANGO_ALLOWED_HOSTS: '*'
         DJANGO_SECRET_KEY: '*'
         DJANGO_CORS_ORIGIN_WHITELIST: '*'
+    environment:
+      - CHOKIDAR_USEPOLLING=true
     command: python manage.py runserver 0.0.0.0:8000
     ports:
       - "8000:8000"
@@ -16,9 +18,12 @@ services:
     build:
       context: ./frontend
     volumes:
-      - build_folder:/frontend/build
+      - ./frontend:/frontend
+      - /frontend/node_modules
     ports:
-       - "3000:3000"
+       - "3001:3000"
+    environment:
+      - CHOKIDAR_USEPOLLING=true
   nginx:
     image: nginx:latest
     ports:
