--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,6 +12,7 @@ ADD yarn.lock ./
 ADD package.json ./
 RUN yarn install --silent
 RUN yarn global add react-scripts@3.4.1 --silent
+RUN yarn global add react-bootstrap bootstrap --silent
 
 # add app
 COPY . ./
