--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,24 +2,39 @@
 version: '3'
 
 services:
+  database:
+    image: postgres:latest
+    environment:
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    ports:
+      - "5432:5432"
+
   backend:
     build:
-      context: ./backend/project/
+      context: ./backend
       args:
         DJANGO_ALLOWED_HOSTS: '*'
         DJANGO_SECRET_KEY: '*'
         DJANGO_CORS_ORIGIN_WHITELIST: '*'
     environment:
       - CHOKIDAR_USEPOLLING=true
-    command: python manage.py runserver 0.0.0.0:8000
+    command: sh -c "python3 manage.py makemigrations &&
+                    python3 manage.py migrate &&
+                    python3 manage.py runserver 0.0.0.0:8000"
+    volumes:
+      - ./backend:/backend
     ports:
       - "8000:8000"
+    depends_on:
+      - database
   frontend:
     build:
       context: ./frontend
     volumes:
       - ./frontend:/frontend
-      - /frontend/node_modules
+      - ./frontend/node_modules
     ports:
        - "3000:3000"
     environment:
@@ -29,10 +44,15 @@ services:
     ports:
       - 80:8080
     volumes:
-      - ./webserver/nginx-proxy.conf:/etc/nginx/conf.d/default.conf:ro
+      - static_volume:/backend/static
       - build_folder:/var/www/frontend
     depends_on:
       - backend
       - frontend
+      - database
 volumes:
   build_folder:
+  postgres_data:
+  frontend:
+  static_volume:
+  backend:
