--- a/webserver/nginx-proxy.conf
+++ b/webserver/nginx-proxy.conf
@@ -1,12 +1,21 @@
-upstream api {
+FROM nginx:latest
+
+RUN rm /etc/nginx/conf.d/default.conf
+COPY ./webserver/nginx-proxy.conf /etc/nginx/conf.d
+
+
+upstream backend {
     server backend:8000;
 }
 
 server {
-    listen 8080;
+    listen 0.0.0.0:8080;
 
-    location /api/ {
-        proxy_pass http://api$request_uri;
+    location / {
+        proxy_pass http://backend;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
     }
 
     # ignore cache frontend
@@ -20,6 +29,6 @@ server {
       root /var/www/frontend;
       try_files $uri $uri/ /index.html;
     }
-	
+
 
 }
