--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,7 +5,7 @@ RUN apt-get update && apt-get install -y python3 python3-pip
 RUN apt-get -y install python3.7-dev
 RUN apt-get -y install postgresql-server-dev-10
 
-RUN pip3 install psycopg2 Django graphene-django pgspecial
+RUN pip3 install psycopg2 Django graphene-django pgspecial django-cors-headers
 
 ENV PYTHONUNBUFFERED=1
 WORKDIR /backend
