--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
        - "3000:3000"
     environment:
       - CHOKIDAR_USEPOLLING=true
+    stdin_open: true
   nginx:
     image: nginx:latest
     ports:
